# ft_vox

./: .gitignore  CMakeLists.txt  IMPLEMENTATION_STATUS.md  Makefile  README.md
.claude/: settings.local.json
.github/workflows/: build.yml
assets/shaders/: chunk.frag  chunk.vert  cloud.frag  cloud.vert  entity.frag  entity.vert  gbuffer.frag  gbuffer.vert  hotbar.frag  hotbar.vert  hud.frag  hud.vert  minimap.frag  minimap.vert  shadow.frag  shadow.vert  skybox.frag  skybox.vert  ssao.frag  ssao.vert  ssao_blur.frag
include/: types.hpp
include/interfaces/: ICamera.hpp  IChunkManager.hpp  IRenderer.hpp  IWorld.hpp
scripts/: download_assets.sh  gen_placeholder_assets.sh  setup.sh
srcs/: main.cpp
srcs/audio/: audio_impl.cpp  audio_manager.cpp  audio_manager.hpp  biome_audio_system.cpp  biome_audio_system.hpp  sound_emitter.cpp  sound_emitter.hpp
srcs/core/: engine.cpp  engine.hpp
srcs/mob/: arrow.hpp  arrow_manager.cpp  arrow_manager.hpp  dragon_manager.cpp  dragon_manager.hpp  ender_dragon.hpp  mob_manager.cpp  mob_manager.hpp  zombie.hpp
srcs/network/: client.cpp  client.hpp  packet.hpp  server.cpp  server.hpp  tcp_socket.cpp  tcp_socket.hpp
srcs/player/: camera.cpp  camera.hpp  input_handler.cpp  input_handler.hpp  player.cpp  player.hpp
srcs/renderer/: cloud.cpp  cloud.hpp  frustum.cpp  frustum.hpp  minimap.cpp  minimap.hpp  renderer.cpp  renderer.hpp  shader.cpp  shader.hpp  skybox.cpp  skybox.hpp  texture_atlas.cpp  texture_atlas.hpp  title_screen.cpp  title_screen.hpp
srcs/streaming/: chunk_manager.cpp  chunk_manager.hpp  lru_cache.hpp
srcs/world/: inventory.cpp  light_calculator.cpp  light_calculator.hpp  mesh_builder.cpp  mesh_builder.hpp  noise.cpp  noise.hpp  recipe.cpp  recipe.hpp  terrain_gen.cpp  terrain_gen.hpp  world.cpp  world.hpp
